--- a/HTML/site.css
+++ b/HTML/site.css
@@ -64,9 +64,13 @@ table.tbl-DevInfo, td.dev-info-cell {
     margin-bottom: 5px;
     margin-left: auto;
     margin-right: auto;
+    padding-right: 2px;
+    padding-left: 2px;
 }
 
 img.dev-img {
-    max-height: 100%;
+    max-height: 250px;
     max-width: 100%;
+    margin-left: 0 auto;
+    margin-right: 0 auto;
 }
