--- a/HTML/site.css
+++ b/HTML/site.css
@@ -34,11 +34,20 @@ div#devicesView {
 }
 
 div#deviceOperationsView {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     border: 2px solid;
     border-radius: 10px;
     height: 350px;
     background-color: rgba(255, 255, 255, 0.6);
+}
+
+div#detectionLog {
+	overflow: scroll;
+}
+
+p.detection-log-entry {
+	font-size: 13px;
 }
 
 #map {
